--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 :root {
@@ -21,7 +22,7 @@ body {
 
 .light {
   --text-color: black;
-  --bg-url: url(./assets/bg-desktop-light.jpg);
+  --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
@@ -36,7 +37,6 @@ body * {
 #container {
   width: 100%;
   max-width: 588px;
-  margin: auto;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -73,11 +73,14 @@ body * {
 
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.02s;
+}
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.04s forwards;
 }
 
 #switch span {
@@ -142,7 +145,34 @@ ul li a:hover {
 }
 
 footer {
-  padding: 100px;
+  padding: 24px;
   text-align: center;
   font-size: 12px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
